== 0.7.7

* Enhancements
  * Visits can be filtered by visit type
  * PHI Access role added to grant de-identified access to retrieve aggregate counts

== 0.7.6

* Enhancements
  * Update to Rails 3.2.5 and Contour 1.0.1
  * Use Ruby 1.9.3-p194

== 0.7.5

* Bug Fix
  * Timeouts no longer cause an error when trying to login again

== 0.7.4

* Enhancements
  * Prescreen and Mailing Bulk Imports will now automatically preprend leading zeros to MRNs under the 8-digit length

* Bug Fix
  * MRNs are now required to have 8 digits, and be zero-padded

== 0.7.3

* Enhancements
  * Call Creator is now listed in the participant timeline and on the call show page
  * Calls can now be filtered and sorted by response

== 0.7.2

* Bug Fix
  * Prescreens, Mailings, Calls, Evaluations, and Visits no longer display if the associated patient has been deleted

== 0.7.1

* Bug Fix
  * Fix Registration page to use new Contour login attributes

== 0.7.0

* Enhancements
  * Using Contour 1.0.0 with Twitter-Bootstrap CSS and JS

* Bug Fix
  * Spinning icon no longer shows indefinitely on participants without subject code

== 0.6.1

* Enhancements
  * Calls can now be filtered by the user making the call
  * Mailings can be filtered to exclude any mailings that have participants ineligibile from a call, evaluation, or prescreen
  * Dates can now be entered in either mm/dd/yy or mm/dd/yyyy format

* Bug Fix
  * Prescreens now require a visit date and time in order to display correctly on the participant timeline

== 0.6.0

* Enhancements
  * Call comments are now also added to a Task Tracker group description
  * Choices can now be set to only show specific fields for different call types
  * Choices can now be set to only show specific fields for different evaluation administration types
  * Task Tracker stickies are now integrated on the Patient Timeline
  * Update to Rails 3.2.3

* Bug Fix
  * Fixed minor graphical menu bug for subject handlers

== 0.5.0

* Enhancements