@@ -2,6 +2,7 @@
 
 * Enhancements
   * Visits can be filtered by visit type
+  * Searching by phone number now returns results for patients, prescreens, mailings, calls, evaluations, and visits
   * PHI Access role added to grant de-identified access to retrieve aggregate counts
 
 == 0.7.6
